Fixed wrong font-family

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -38,7 +38,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $font-family-primary;
+  font-family: $font-family-secondary;
 }
 
 h1 {
